--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
          </div>
 
  <div class="video-container" style="text-align:center;">
-  <video id="videoPlayer" width="300" style="box-shadow: 0 0 50px black;" autoplay muted></video>
+  <video id="videoPlayer" width="300" style="box-shadow: 0 0 50px black;"  autoplay muted playsinline></video>
   <h3 id="videoName" style="color:white; margin-top:10px;"></h3>
 </div>
 <script>
@@ -415,28 +415,23 @@ setInterval(changeVideo, 3000);
   <div class="slider-track" id="videoTrack">
 
     <!-- Original videos -->
-    <video class="vv" src="assets/slides/VID-20251112-WA0006.mp4" muted loop autoplay></video>
-    <video class="vv" src="assets/slides/VID-20251112-WA0007.mp4" muted loop autoplay></video>
-    <video class="vv" src="assets/slides/VID-20251112-WA0008.mp4" muted loop autoplay></video>
-    <video class="vv" src="assets/slides/VID-20251112-WA0009.mp4" muted loop autoplay></video>
-    <video class="vv" src="assets/slides/VID-20251112-WA0010.mp4" muted loop autoplay></video>
-    <video class="vv" src="assets/slides/VID-20251112-WA0011.mp4" muted loop autoplay></video>
-    <video class="vv" src="assets/slides/VID-20251112-WA0012.mp4" muted loop autoplay></video>
-    <video class="vv" src="assets/slides/VID-20251112-WA0013.mp4" muted loop autoplay></video>
-    <video class="vv" src="assets/slides/VID-20251112-WA0014.mp4" muted loop autoplay></video>
-    <video class="vv" src="assets/slides/VID-20251112-WA0015.mp4" muted loop autoplay></video>
+    <video class="vv" src="assets/slides/VID-20251112-WA0006.mp4" muted loop autoplay playsinline></video>
+    <video class="vv" src="assets/slides/VID-20251112-WA0007.mp4" muted loop autoplay playsinline></video>
+    <video class="vv" src="assets/slides/VID-20251112-WA0008.mp4" muted loop autoplay playsinline></video>
+    <video class="vv" src="assets/slides/VID-20251112-WA0009.mp4" muted loop autoplay playsinline></video>
+    <video class="vv" src="assets/slides/VID-20251112-WA0010.mp4" muted loop autoplay playsinline></video>
+    <video class="vv" src="assets/slides/VID-20251112-WA0011.mp4" muted loop autoplay playsinline></video>
+    <video class="vv" src="assets/slides/VID-20251112-WA0012.mp4" muted loop autoplay playsinline></video>
+    <video class="vv" src="assets/slides/VID-20251112-WA0013.mp4" muted loop autoplay playsinline></video>
+    <video class="vv" src="assets/slides/VID-20251112-WA0014.mp4" muted loop autoplay playsinline></video>
+    <video class="vv" src="assets/slides/VID-20251112-WA0015.mp4" muted loop autoplay playsinline></video>
 
     <!-- Duplicate set for seamless loop -->
-    <video class="vv" src="assets/slides/VID-20251112-WA0006.mp4" muted loop autoplay></video>
-    <video class="vv" src="assets/slides/VID-20251112-WA0007.mp4" muted loop autoplay></video>
-    <video class="vv" src="assets/slides/VID-20251112-WA0008.mp4" muted loop autoplay></video>
-    <video class="vv" src="assets/slides/VID-20251112-WA0009.mp4" muted loop autoplay></video>
-    <video class="vv" src="assets/slides/VID-20251112-WA0010.mp4" muted loop autoplay></video>
-    <video class="vv" src="assets/slides/VID-20251112-WA0011.mp4" muted loop autoplay></video>
-    <video class="vv" src="assets/slides/VID-20251112-WA0012.mp4" muted loop autoplay></video>
-    <video class="vv" src="assets/slides/VID-20251112-WA0013.mp4" muted loop autoplay></video>
-    <video class="vv" src="assets/slides/VID-20251112-WA0014.mp4" muted loop autoplay></video>
-    <video class="vv" src="assets/slides/VID-20251112-WA0015.mp4" muted loop autoplay></video>
+    <video class="vv" src="assets/slides/VID-20251112-WA0016.mp4" muted loop autoplay playsinline></video>
+    <video class="vv" src="assets/slides/VID-20251112-WA0017.mp4" muted loop autoplay playsinline></video>
+    <video class="vv" src="assets/slides/VID-20251112-WA0018.mp4" muted loop autoplay playsinline></video>
+    <video class="vv" src="assets/slides/VID-20251112-WA0019.mp4" muted loop autoplay playsinline></video>
+  
 
   </div>
 </div>
