--- a/brands.html
+++ b/brands.html
@@ -171,6 +171,126 @@
     #soundToggle:hover {
     box-shadow: 0 0 10px white;
 }
+/* ---------------------------
+   📱 MOBILE VIEW FIX
+----------------------------*/
+@media (max-width: 768px) {
+
+    header {
+        padding: 15px;
+        text-align: center;
+        height: auto;
+    }
+    header a{
+        font-size: 10px;
+        margin: 0;
+    }
+
+    .logo {
+        width: 30px;
+        margin-bottom: 40px;
+    }
+
+    .welcome-heading {
+        font-size: 28px;
+        margin: 10px 0;
+        margin-left: 20px;
+        text-shadow: 0 0 50px black;
+    }
+
+    /* Container stays side-by-side */
+    .container {
+        width: 80%;         /* 👉 Your required width */
+        height: 600px;      /* 👉 Fixed height */
+        flex-direction: row;
+        margin-top: 20px;
+        border-radius: 12px;
+    }
+
+    /* Image box */
+    .image-box {
+        width: 50%;
+        height: 100%;
+    }
+
+    .image-box video {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+
+    /* Form box */
+    .form-box {
+        width: 50%;
+        padding: 12px;
+        overflow-y: auto;    /* prevents overflow */
+    }
+
+    fieldset {
+        padding: 10px;
+    }
+
+    legend {
+        font-size: 14px;
+        padding: 5px 10px;
+    }
+
+    /* -------------------------
+       SMALL INPUTS + CLEAN UI
+       ------------------------- */
+   label {
+    font-size: 10px !important;
+    margin: 0;
+}
+
+/* Inputs + textarea extra small */
+input, textarea {
+    font-size: 5px !important;
+    padding: 6px !important;     /* smaller padding */
+    margin-bottom: 8px;
+    border-radius: 4px;
+   
+}
+input::placeholder,
+textarea::placeholder {
+    font-size: 5px !important;
+}
+
+  button {
+    font-size: 10px !important;
+    padding: 6px !important;
+}
+
+
+    .flex-row {
+        flex-direction: column;
+        gap: 0;
+    }
+
+    /* Sections */
+    section {
+        padding: 25px 15px;
+    }
+
+    h2 {
+        font-size: 20px;
+    }
+    /* ABOUT + CONTACT smaller on mobile */
+#about, #contact {
+    padding: 15px 10px !important;   /* smaller padding */
+}
+
+#about h2, #contact h2 {
+    font-size: 18px !important;      /* smaller heading */
+}
+
+#about p, 
+#contact .contact-info {
+    font-size: 10px !important;      /* smaller text */
+    line-height: 16px !important;
+}
+
+}
 
 
 </style>
