--- a/influencers.html
+++ b/influencers.html
@@ -296,9 +296,9 @@ section {
 
     <div class="image-box" style="position:relative;">
 
-    <video id="brandVideo" autoplay loop muted playsinline style="width:100%; height:100%; object-fit:cover;">
+    <!-- <video id="brandVideo" autoplay loop muted playsinline style="width:100%; height:100%; object-fit:cover;">
         <source src="vd.mp4" type="video/mp4">
-    </video>
+    </video> -->
 
     <!-- Speaker Button -->
     <button id="soundToggle"
