--- a/brands.html
+++ b/brands.html
@@ -310,13 +310,13 @@ textarea::placeholder {
 <!-- ✅ Registration Section -->
 <div id="register" class="container">
 
-  <div class="image-box" style="position:relative;">
+  <!-- <div class="image-box" style="position:relative;">
 
     <video id="brandVideo" autoplay loop muted playsinline style="width:100%; height:100%; object-fit:cover;">
         <source src="assets/list/vd.mp4" type="video/mp4">
     </video>
 
-    <!-- Speaker Button -->
+  
     <button id="soundToggle"
         style="position:absolute; bottom:20px; right:20px; background:rgba(0,0,0,0.5);
                border:none; color:white; padding:10px 12px; border-radius:50%; cursor:pointer;
@@ -329,19 +329,19 @@ const video = document.getElementById("brandVideo");
 const btn = document.getElementById("soundToggle");
 
 btn.addEventListener("click", () => {
-    video.muted = !video.muted;  // Toggle sound mute/unmute
+    video.muted = !video.muted;  
 
     if (video.muted) {
-        btn.textContent = "🔇"; // Mute icon
+        btn.textContent = "🔇"; 
     } else {
-        btn.textContent = "🔊"; // Sound icon
-        video.play(); // Ensure video continues playing after unmute
+        btn.textContent = "🔊"; 
+        video.play(); 
     }
 });
 </script>
 
 
-
+ -->
 
     <div class="form-box">
 
