--- a/brands.html
+++ b/brands.html
@@ -46,7 +46,7 @@
 
     /* Container (Form + Image) */
     .container {
-        width: 1100px;
+        width: 60%;
         margin: auto;
         margin-top: 40px;
         display: flex;
@@ -57,7 +57,7 @@
         overflow: hidden;
         box-shadow: 0px 0px 20px rgba(0,0,0,0.4);
     }
-
+/* 
     .image-box {
         width: 45%;
         background: white;
@@ -70,10 +70,10 @@
         width: 100%;
         height: 100%;
         object-fit: cover;
-    }
+    } */
 
     .form-box {
-        width: 55%;
+        width: 90%;
         padding: 40px 40px;
         color: white;
     }
@@ -157,7 +157,7 @@
         font-size: 38px;
         font-weight: 700;
         margin-top: 30px;
-        margin-left:250px;
+        margin-left:70px;
        text-shadow: 0 2px 10px black;
        font-size: 70px;
     }
@@ -200,7 +200,7 @@
 
     /* Container stays side-by-side */
     .container {
-        width: 80%;         /* 👉 Your required width */
+        width: 60%;         /* 👉 Your required width */
         height: 600px;      /* 👉 Fixed height */
         flex-direction: row;
         margin-top: 20px;
@@ -208,7 +208,7 @@
     }
 
     /* Image box */
-    .image-box {
+    /* .image-box {
         width: 50%;
         height: 100%;
     }
@@ -217,11 +217,11 @@
         width: 100%;
         height: 100%;
         object-fit: cover;
-    }
+    } */
 
     /* Form box */
     .form-box {
-        width: 50%;
+        width: 90%;
         padding: 12px;
         overflow-y: auto;    /* prevents overflow */
     }
@@ -249,6 +249,7 @@ input, textarea {
     padding: 6px !important;     /* smaller padding */
     margin-bottom: 8px;
     border-radius: 4px;
+    
    
 }
 input::placeholder,
@@ -309,14 +310,14 @@ textarea::placeholder {
 
 <!-- ✅ Registration Section -->
 <div id="register" class="container">
-
-  <!-- <div class="image-box" style="position:relative;">
+<!-- 
+  <div class="image-box" style="position:relative;">
 
     <video id="brandVideo" autoplay loop muted playsinline style="width:100%; height:100%; object-fit:cover;">
         <source src="assets/list/vd.mp4" type="video/mp4">
     </video>
 
-  
+   
     <button id="soundToggle"
         style="position:absolute; bottom:20px; right:20px; background:rgba(0,0,0,0.5);
                border:none; color:white; padding:10px 12px; border-radius:50%; cursor:pointer;
@@ -338,10 +339,10 @@ btn.addEventListener("click", () => {
         video.play(); 
     }
 });
-</script>
+</script> -->
 
 
- -->
+
 
     <div class="form-box">
 
