--- a/influencers.html
+++ b/influencers.html
@@ -382,7 +382,7 @@ btn.addEventListener("click", () => {
                         <input type="text" id="district" placeholder="Enter District" required>
                    
                         <label>ZIP / Postal Code</label>
-                        <input type="number" id="zip" placeholder="500001" required>
+                        <input type="text" id="zip" placeholder="500001" required>
                     
                         <label>Platform</label>
                         <input type="text" id="platform" placeholder="Ex: Instagram, youtube..." required>
