--- a/brands.html
+++ b/brands.html
@@ -549,7 +549,7 @@ document.getElementById("brandForm").addEventListener("submit", function (e) {
 
         document.getElementById("brandForm").reset();
         isOtpVerified = false;
-         window.location.href = "success.html";
+         window.location.href = "sucess.html";
     })
     .catch(err => {
         alert("❌ Something went wrong: " + err);
