--- a/influencers.html
+++ b/influencers.html
@@ -594,7 +594,7 @@ document.getElementById("influencerForm").addEventListener("submit", function (e
         document.getElementById("influencerForm").reset();
         isOtpVerified = false;
         otpSessionId = "";
-         window.location.href = "success.html";
+         window.location.href = "sucess.html";
 
     })
     .catch(err => alert("❌ Something went wrong: " + err));
